done with subword model, though need to take another look/revise

--- a/stanford_qa_cnn_archcomparison_qrnn.ipynb
+++ b/stanford_qa_cnn_archcomparison_qrnn.ipynb
@@ -265,7 +265,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Used in assignment 5 to build better machine translation model"
+    "Used in assignment 5 to build better machine translation model\n",
+    "\n",
+    "TODO: remove! (move to submodel notebook)"
    ]
   },
   {
