--- a/s4/everything.ipynb
+++ b/s4/everything.ipynb
@@ -151,9 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# model_embedding"
    ]
@@ -161,9 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch.nn as nn"
@@ -172,9 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class ModelEmbeddings(nn.Module): \n",
@@ -336,7 +330,7 @@
     "        self.c_projection = nn.Linear(hidden_size * 2, hidden_size, bias=False) # Wc\n",
     "    \n",
     "#         self.att_projection = nn.Linear(hidden_size, hidden_size * 2, bias=False) # W_attprop\n",
-    "        # h_decode(bs,h) @ W(h,2h) = (bs,2h) * h_enc^T(n,2h) = (n,2h) sum axis 1 = (n,1)\n",
+    "        # h_decode(bs,h) @ W(h,2h) = (bs,2h) * h_enc^T(m,2h) = (m,2h) sum axis 1 = (m,1)\n",
     "        # FOR ONE h_enc ONLY. Ideally you will have (bs,m) for m h_encs\n",
     "        # m is length of source sentence, bs is # of sentences in a tensor batch\n",
     "        \n",
