--- a/stanford_novel_ideas_nlp.ipynb
+++ b/stanford_novel_ideas_nlp.ipynb
@@ -25,6 +25,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## important note regarding the comparison of different architecture"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://youtu.be/EAJoRA0KX7I?t=3241"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## In the 2 arch above, one are not really more powerful than the others as one can argue that the conv net in residual block can learn to calculate how much of the identity (or the neural net) to discard, which is basically similar to how much of the identity to keep for the right arch\n",
+    "\n",
+    "\"In neural network land, the question isn't some kind of proof of something can be computed or not. It comes down to learning and regularization questions as to whether one or the other can actually performs/proves to be a better learning architecture\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1 convolution"
    ]
   },
