--- a/stanford_subword_models.ipynb
+++ b/stanford_subword_models.ipynb
@@ -233,7 +233,9 @@
    "source": [
     "https://youtu.be/9oTHFx0Gg3Q?t=3280\n",
     "\n",
-    "http://web.stanford.edu/class/cs224n/slides/cs224n-2020-lecture12-subwords.pdf"
+    "http://web.stanford.edu/class/cs224n/slides/cs224n-2020-lecture12-subwords.pdf\n",
+    "\n",
+    "Assignment 5"
    ]
   },
   {
