almost done with session 1 ex5

--- a/s5/everything.ipynb
+++ b/s5/everything.ipynb
@@ -38,12 +38,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## code"
+    "## code for VocabEntry"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
     "        ###     - Use `pad_sents_char()` from utils.py, which pads all words to max_word_length of all words in the batch,\n",
     "        ###       and pads all sentences to max length of all sentences in the batch. Read __init__ to see how to get\n",
     "        ###       index of character-padding token\n",
-    "        sents_var = torchpad_sents_char(list_of_indices,self.char_pad).permute(1,0,2)\n",
+    "        sents_var = torch.Tensor(pad_sents_char(list_of_indices,self.char_pad)).permute(1,0,2)\n",
     "        ###     - Connect these two parts to convert the resulting padded sentences to a torch tensor.\n",
     "        return sents_var\n",
     "        ### HINT:\n",
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        " [[1, 12, 2], [1, 40, 43, 44, 52, 2]]]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "['{', 'k', 'n', 'o', 'w', '}']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,34 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[ 1., 12.,  2.,  0.,  0.,  0.,  0.,  0.],\n",
-       "         [ 1., 41., 44., 51., 34., 34., 34.,  2.],\n",
-       "         [ 1., 54., 44., 50.,  2.,  0.,  0.,  0.]],\n",
-       "\n",
-       "        [[ 1., 12.,  2.,  0.,  0.,  0.,  0.,  0.],\n",
-       "         [ 1., 40., 43., 44., 52.,  2.,  0.,  0.],\n",
-       "         [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.]]])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp1 = torch.Tensor(temp.to_input_tensor_char([['I','loveee','you'],['I','know']],1))\n",
-    "temp1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +303,34 @@
        "         [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.]]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp1 = torch.Tensor(temp.to_input_tensor_char([['I','loveee','you'],['I','know']],1))\n",
+    "temp1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 1., 12.,  2.,  0.,  0.,  0.,  0.,  0.],\n",
+       "         [ 1., 41., 44., 51., 34., 34., 34.,  2.],\n",
+       "         [ 1., 54., 44., 50.,  2.,  0.,  0.,  0.]],\n",
+       "\n",
+       "        [[ 1., 12.,  2.,  0.,  0.,  0.,  0.,  0.],\n",
+       "         [ 1., 40., 43., 44., 52.,  2.,  0.,  0.],\n",
+       "         [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.]]])"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,64 +360,116 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## code for highway"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Vocab(object):\n",
-    "    \"\"\" Vocab encapsulating src and target langauges.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self, src_vocab: VocabEntry, tgt_vocab: VocabEntry):\n",
-    "        \"\"\" Init Vocab.\n",
-    "        @param src_vocab (VocabEntry): VocabEntry for source language\n",
-    "        @param tgt_vocab (VocabEntry): VocabEntry for target language\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](../images/ex5_2.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Highway(nn.Module):\n",
+    "    def __init__(self,e_word):\n",
+    "        super().__init__()\n",
+    "        self.e_word = e_word\n",
+    "        self.w_proj = nn.Linear(e_word,e_word)\n",
+    "        self.w_gate = nn.Linear(e_word,e_word)\n",
+    "        # init linear weight and bias?\n",
+    "    def forward(self,x_conv_out):\n",
     "        \"\"\"\n",
-    "        self.src = src_vocab\n",
-    "        self.tgt = tgt_vocab\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def build(src_sents, tgt_sents, vocab_size, freq_cutoff) -> 'Vocab':\n",
-    "        \"\"\" Build Vocabulary.\n",
-    "        @param src_sents (list[str]): Source sentences provided by read_corpus() function\n",
-    "        @param tgt_sents (list[str]): Target sentences provided by read_corpus() function\n",
-    "        @param vocab_size (int): Size of vocabulary for both source and target languages\n",
-    "        @param freq_cutoff (int): if word occurs n < freq_cutoff times, drop the word.\n",
+    "         \n",
+    "        raw_input: (max_sentence_length,bs,max_word_length aka m)\n",
+    "        which should be output of to_input_tensor_char()\n",
+    "        --char_emb()-->\n",
+    "        x_emb: (max_sentence_length,bs,max_word_length,e_char)\n",
+    "        with e_char is size of character embedding. \n",
+    "        \n",
+    "        --reshape()-->\n",
+    "        x_reshaped: (max_sentence_length,bs,e_char,max_word_length)\n",
+    "        \n",
+    "        --cnn()-->\n",
+    "        x_conv: (max_sentence_length,bs,e_word,max_word_length-k+1)\n",
+    "        with k is kernel size,e_word is the desired word embedding size\n",
+    "        TODO: do a loop for each sentence?\n",
+    "        \n",
+    "        --relu_and_globalmaxpool()-->\n",
+    "        x_conv_out: (max_sentence_length,bs,e_word)\n",
+    "        \n",
+    "        --high_way()-->\n",
+    "        x_highway: (max_sentence_length,bs,e_word)\n",
+    "        \n",
+    "        --dropout()-->\n",
+    "        x_word_emb: (max_sentence_length,bs,e_word)\n",
+    "        \n",
+    "        input: x_conv_out shape (bs,max_sentence_length,e_word)\n",
+    "        output: x_highway shape (bs,max_sentence_length,e_word) (no dropout applied)\n",
     "        \"\"\"\n",
-    "        assert len(src_sents) == len(tgt_sents)\n",
-    "\n",
-    "        print('initialize source vocabulary ..')\n",
-    "        src = VocabEntry.from_corpus(src_sents, vocab_size, freq_cutoff)\n",
-    "\n",
-    "        print('initialize target vocabulary ..')\n",
-    "        tgt = VocabEntry.from_corpus(tgt_sents, vocab_size, freq_cutoff)\n",
-    "\n",
-    "        return Vocab(src, tgt)\n",
-    "\n",
-    "    def save(self, file_path):\n",
-    "        \"\"\" Save Vocab to file as JSON dump.\n",
-    "        @param file_path (str): file path to vocab file\n",
-    "        \"\"\"\n",
-    "        json.dump(dict(src_word2id=self.src.word2id, tgt_word2id=self.tgt.word2id), open(file_path, 'w'), indent=2)\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def load(file_path):\n",
-    "        \"\"\" Load vocabulary from JSON dump.\n",
-    "        @param file_path (str): file path to vocab file\n",
-    "        @returns Vocab object loaded from JSON dump\n",
-    "        \"\"\"\n",
-    "        entry = json.load(open(file_path, 'r'))\n",
-    "        src_word2id = entry['src_word2id']\n",
-    "        tgt_word2id = entry['tgt_word2id']\n",
-    "\n",
-    "        return Vocab(VocabEntry(src_word2id), VocabEntry(tgt_word2id))\n",
-    "\n",
-    "    def __repr__(self):\n",
-    "        \"\"\" Representation of Vocab to be used\n",
-    "        when printing the object.\n",
-    "        \"\"\"\n",
-    "        return 'Vocab(source %d words, target %d words)' % (len(self.src), len(self.tgt))"
+    "        \n",
+    "        x_proj = F.relu(self.w_proj(x_conv_out))\n",
+    "        x_gate = torch.sigmoid(self.w_gate(x_conv_out))\n",
+    "        x_highway = x_gate * x_proj + (1-x_gate) * x_conv_out\n",
+    "        return x_highway"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test highway\n",
+    "temp_highway = Highway(2)\n",
+    "temp_conv_out = torch.randn(4,3,2)\n",
+    "temp_result = temp_highway(temp_conv_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 3, 2])"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_result.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## code for cnn"
    ]
   },
   {
@@ -426,20 +478,111 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if __name__ == '__main__':\n",
-    "    args = docopt(__doc__)\n",
-    "\n",
-    "    print('read in source sentences: %s' % args['--train-src'])\n",
-    "    print('read in target sentences: %s' % args['--train-tgt'])\n",
-    "\n",
-    "    src_sents = read_corpus(args['--train-src'], source='src')\n",
-    "    tgt_sents = read_corpus(args['--train-tgt'], source='tgt')\n",
-    "\n",
-    "    vocab = Vocab.build(src_sents, tgt_sents, int(args['--size']), int(args['--freq-cutoff']))\n",
-    "    print('generated vocabulary, source %d words, target %d words' % (len(vocab.src), len(vocab.tgt)))\n",
-    "\n",
-    "    vocab.save(args['VOCAB_FILE'])\n",
-    "    print('vocabulary saved to %s' % args['VOCAB_FILE'])"
+    "class CNN(nn.Module):\n",
+    "    def __init__(self,e_char,e_word,k):\n",
+    "        super().__init__()\n",
+    "        self.conv1d = nn.Conv1d(e_char,e_word,k)\n",
+    "    def forward(self,x_reshaped):\n",
+    "        \"\"\"\n",
+    "        input: x_reshaped: (max_sentence_length,bs,e_char,max_word_length)\n",
+    "        \n",
+    "        output: x_conv: (max_sentence_length,bs,e_word,max_word_length-k+1)\n",
+    "        with k is kernel size,e_word is the desired word embedding size\n",
+    "        \n",
+    "        \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test cnn\n",
+    "temp_conv = nn.Conv1d(3,4,2) #in_channels,out_channels,kernel_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_w = temp_conv.weight.data\n",
+    "temp_b = temp_conv.bias.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_x = torch.randn(1, 3, 2) # bs,in_channels aka emb size,number_of_items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 0.2538],\n",
+       "         [-0.0983],\n",
+       "         [ 0.3462],\n",
+       "         [ 0.8006]]], grad_fn=<SqueezeBackward1>)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp3 = temp_conv(temp_x)\n",
+    "temp3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 4, 1])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp3.shape # bs,out_channels,new_number_of_items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.2538)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(temp_w[0] * temp_x[0]).sum() + temp_b[0]"
    ]
   }
  ],
